// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityFeedFilters when the details for all activities are hidden renders filters 1`] = `
.c0 {
  background-color: #dee0e2;
  padding: 10px;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
}

.c1:link {
  color: #005ea5;
}

.c1:visited {
  color: #4c2c92;
}

.c1:hover {
  color: #2b8cc4;
}

.c1:active {
  color: #2b8cc4;
}

.c1:focus {
  color: #0b0c0c;
}

.c1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
  background-color: #ffbf47;
}

@media print {
  .c1 {
    font-family: sans-serif;
  }
}

@media print {
  .c1[href^="/"]::after,
  .c1[href^="http://"]::after,
  .c1[href^="https://"]::after {
    content: " (" attr(href) ")";
    font-size: 90%;
    word-wrap: break-word;
  }
}

<div
  className="c0"
>
  <a
    className="c1"
    href="#"
    muted={false}
    onClick={[Function]}
  >
    Show
     details for all activities
  </a>
</div>
`;

exports[`ActivityFeedFilters when the details for all activities are shown renders filters 1`] = `
.c0 {
  background-color: #dee0e2;
  padding: 10px;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
}

.c1:link {
  color: #005ea5;
}

.c1:visited {
  color: #4c2c92;
}

.c1:hover {
  color: #2b8cc4;
}

.c1:active {
  color: #2b8cc4;
}

.c1:focus {
  color: #0b0c0c;
}

.c1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
  background-color: #ffbf47;
}

@media print {
  .c1 {
    font-family: sans-serif;
  }
}

@media print {
  .c1[href^="/"]::after,
  .c1[href^="http://"]::after,
  .c1[href^="https://"]::after {
    content: " (" attr(href) ")";
    font-size: 90%;
    word-wrap: break-word;
  }
}

<div
  className="c0"
>
  <a
    className="c1"
    href="#"
    muted={false}
    onClick={[Function]}
  >
    Hide
     details for all activities
  </a>
</div>
`;
